--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html style="height: calc(100% - 16px);" lang="en">
 <head>
   <meta charset="utf-8">
   <title>TbDropfileLibApp</title>
@@ -7,8 +7,9 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
+<body style="height: 100%;">
   <app-root></app-root>
 </body>
 </html>
